--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 background-color:rgb(161, 161,161);
                 border:6px double black;
                 padding:5px;
-                width:50%;
+                width:626px;
                 margin-left:10px;
                 margin-top:20px;
                 
